--- a/.env.db.dev
+++ b/.env.db.dev
@@ -1,3 +1,3 @@
-POSTGRES_USER=api_user
-POSTGRES_PASSWORD=example
-POSTGRES_DB=task_management
+POSTGRES_USER=postgres_user
+POSTGRES_PASSWORD=password
+POSTGRES_DB=postgres
