update readme file

--- a/.env.example
+++ b/.env.example
@@ -3,9 +3,9 @@ DEBUG=True
 AUTO_RELOAD=True
 
 # App configuration
-APP_HOST=localhost
+APP_HOST=0.0.0.0
 APP_PORT=8000
-APP_NAME=boilerplate
+APP_NAME=task_management
 BACKEND_CORS_ORIGIN=[*]
 SECRET_KEY=123
 API_PREFIX_URL=/api/v1
@@ -13,11 +13,11 @@ ACCESS_TOKEN_EXPIRE_DAYS=
 REFRESH_TOKEN_EXPIRE_DAYS=
 
 # Database configuration
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=5432
-DB_USERNAME=root
-DB_PASSWORD=example
-DB_NAME=api_boilerplate
+DB_USERNAME=postgres_user
+DB_PASSWORD=password
+DB_NAME=postgres
 
 FRONTEND_BASE_URL=
 # email configuration
